--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <title>Progress Steps</title>
+    <title>Todo List</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <h1>todos</h1>
+    <form id="form">
+      <input type="text" class="input" id="input" placeholder="Enter yout todo" autocomplete="off">
+      <ul class="todos" id="todos">
+        <li>My First Todo</li>
+        <li>My 2nd Todo</li>
+      </ul>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
