--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       <input type="text" class="input" id="input" placeholder="Enter yout todo" autocomplete="off">
       <ul class="todos" id="todos">
         <li>My First Todo</li>
-        <li>My 2nd Todo</li>
+        <li class="completed">My 2nd Todo</li>
       </ul>
     </form>
+    <small>Left click to toggle completed. <br> Right
+    click to delete todo</small>
     <script src="script.js"></script>
   </body>
 </html>
